[package]
name = "plop-tui"
version = "0.1.1"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilaborie/plop-tui"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.25.3"
prettytable-rs = "0.10.0"
