[package]
name = "lcdiagsd_grid"
version = "0.1.1"
authors = ["norbert <norbert@norbert-mooser.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/norbertmooser/lcdiagsd_grid.git"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.25.3"
prettytable-rs = "0.10.0"
